# autotools-course

./: .gitignore  AUTHORS  Makefile.am  README.md  autotools-course.spec.in  configure.ac  knesenko.spec.in
src/: Makefile.am  test.sh
